# QuitStore

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  Dockerfile  FileReference.py  FlaskApiParser.py  GitRepo.py  QueryCheck.py  README.md  Taskfile.yml  config-vocab.ttl  config.example.ttl  config.ttl  config.yml  doap.ttl  handleexit.py  lol.bat  pylama.ini  pylava.ini  pyproject.toml  quit.py  quit.spec  quitFiles.py  requirements.txt  requirements.txt.windows.patch  setup.cfg  setup.py
.github/workflows/: build.yml
assets/: LICENSE.txt
docker/: config.ttl
graphs/default/: default.nt
quit/: __init__.py  application.py  benchmark.py  cache.py  conf.py  core.py  deprecated.py  evaluate.py  exceptions.py  git.py  graphs.py  helpers.py  htmlresults.py  merge.py  namespace.py  processor.py  provenance.py  quit.py  run.py  serializer.py  service.py  update.py  utils.py
quit/plugins/parsers/: parsers.py
quit/plugins/serialisers/: nquadsordered.py
quit/plugins/serializers/: nquadsordered.py
quit/tools/: algebra.py  evaluate.py  plugin.py  processor.py  update.py
quit/web/: app.py  service.py
quit/web/extras/: commits_graph.py
quit/web/modules/: application.py  debug.py  endpoint.py  git.py  websocket.py
quit/web/static/css/: quit.css
quit/web/templates/: 404.html  base.html  blame.html  branch.html  commits.html  config_error.html  default.html  merge.html  message.html  provenance.html  results.html  sparql.html  statements.html
scripts/: install-libgit2.sh
tests/: check_git_env.py  context.py  helpers.py  script.py  test_app.py  test_cache.py  test_conf.py  test_core.py  test_endpoint.py  test_failing_graphfiles.py  test_failing_no_versioning.py  test_git.py  test_graphs.py  test_helpers.py  test_namespace.py  test_provenance.py  test_quit.py
tests/assets/sshkey/: README.md  id_rsa  id_rsa.pub
tests/merges/: branch.nt  context.py  target.nt  test_merge_methods.py
tests/merges/FirstTest/: base.nt  branch.nt  result.nt  target.nt
tests/merges/TestA/: a_graphs  branch.nt  target.nt
tests/merges/TestABCD/: a_graphs  branch.nt  target.nt
tests/merges/TestB/: a_graphs  branch.nt  debugResult  target.nt
tests/merges/TestC/: a_graphs  branch.nt  debugResult  target.nt
tests/merges/TestD/: a_graphs  branch.nt  debugResult  target.nt
tests/merges/TestHouseMerge/: a_graphs  branch.nt  target.nt
vocab/: config-shapes.ttl  config-vocab.ttl  provenance-shapes.ttl  vocab.ttl
(+13 files in other folders)
