[tool.poetry]
name = "quit"
version = "0.25.4"
description = "Quads in Git - Distributed Version Control for RDF Knowledge Bases"
authors = ["Norman Radtke <http://aksw.org/NormanRadtke>", "Natanael Arndt <http://aksw.org/NatanaelArndt>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^6.0.2"
Flask = "^2.0.2"
Flask-Cors = "^3.0.10"
pygit2 = ">=1.1.0"
sortedcontainers = "^2.4.0"
uritools = "^3.0.2"
uWSGI = "^2.0.20"

[tool.poetry.dev-dependencies]
pylava = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quitstore = "quit.run:run"
